# DRL-Nav-modified

./: README.md
TD3/assets/: multi_robot_scenario.launch.py
TD3/install/: local_setup.sh  setup.sh
TD3/install/td3/lib/td3/: test_velodyne_td3.py  (+2 more)
TD3/log/: latest_build
TD3/results/: TD3_velodyne.npy
TD3/runs/Jul10_10-26-18_vtx/: events.out.tfevents.1720581978.vtx.4803.0
TD3/runs/Jul10_10-28-12_vtx/: events.out.tfevents.1720582092.vtx.5067.0
TD3/runs/Jul10_10-28-50_vtx/: events.out.tfevents.1720582130.vtx.5231.0
TD3/runs/Jul10_10-30-39_vtx/: events.out.tfevents.1720582239.vtx.5732.0
TD3/runs/Jul10_10-38-08_vtx/: events.out.tfevents.1720582688.vtx.9074.0
TD3/runs/Jul10_10-40-38_vtx/: events.out.tfevents.1720582838.vtx.25571.0
TD3/runs/Jul10_10-48-06_vtx/: events.out.tfevents.1720583286.vtx.83176.0
TD3/runs/Jul10_11-05-07_vtx/: events.out.tfevents.1720584307.vtx.241847.0
TD3/runs/Jul10_11-06-27_vtx/: events.out.tfevents.1720584387.vtx.242492.0
TD3/runs/Jul10_11-07-50_vtx/: events.out.tfevents.1720584470.vtx.243215.0
TD3/runs/Jul10_11-09-47_vtx/: events.out.tfevents.1720584587.vtx.244648.0
TD3/runs/Jul10_11-10-39_vtx/: events.out.tfevents.1720584639.vtx.245664.0
TD3/runs/Jul11_08-54-00_vtx/: events.out.tfevents.1720662840.vtx.259714.0
TD3/runs/Jul11_08-55-01_vtx/: events.out.tfevents.1720662901.vtx.260189.0
TD3/runs/Jul11_08-56-13_vtx/: events.out.tfevents.1720662973.vtx.260772.0
TD3/runs/Jul11_08-58-04_vtx/: events.out.tfevents.1720663084.vtx.261156.0
TD3/runs/Jul11_08-59-25_vtx/: events.out.tfevents.1720663165.vtx.261949.0
TD3/runs/Jul11_09-00-51_vtx/: events.out.tfevents.1720663251.vtx.262633.0
TD3/runs/Jul11_09-01-30_vtx/: events.out.tfevents.1720663290.vtx.263107.0
TD3/runs/Jul11_09-02-55_vtx/: events.out.tfevents.1720663375.vtx.263633.0
TD3/src/: CMakeLists.txt  package.xml  test_velodyne_td3.py  train_velodyne_td3.py  velodyne_env.py
(+18 files in other folders)
